--- a/app/src/main/res/layout/activity_minute.xml
+++ b/app/src/main/res/layout/activity_minute.xml
@@ -30,7 +30,7 @@
     <ScrollView
         android:id="@+id/scrollView"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="350dp"
         android:layout_weight="1"
         android:padding="8dp">
 
@@ -54,6 +54,23 @@
         android:layout_marginTop="16dp"
         android:text="打开链接"
         android:visibility="gone" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:padding="10dp">
+
+        <ImageButton
+            android:id="@+id/btn_favorites"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
+            android:src="@drawable/favourite"
+            android:contentDescription="收藏"
+            android:layout_centerInParent="true" />
+
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/bottom_navigation_layout"
