--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -26,12 +26,98 @@
     </androidx.cardview.widget.CardView>
 
     <TextView
+        android:id="@+id/question_2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:padding="16dp"
+        android:text="1. 欲しいの効果を選択してください"
+        android:textColor="@android:color/black"
+        android:textSize="18sp" />
+
+    <GridLayout
+        android:id="@+id/recommendation_grid"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:alignmentMode="alignMargins"
+        android:columnCount="3"
+        android:rowCount="3"
+        android:useDefaultMargins="true">
+
+        <RadioButton
+            android:id="@+id/check_relax"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:text="リラックス"
+            android:textSize="16sp" />
+
+        <RadioButton
+            android:id="@+id/check_clean"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:text="空間浄化"
+            android:textSize="16sp" />
+
+        <RadioButton
+            android:id="@+id/check_change"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:text="気分転換"
+            android:textSize="16sp" />
+
+        <RadioButton
+            android:id="@+id/check_bedroom"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:text="寝室用"
+            android:textSize="16sp" />
+
+        <RadioButton
+            android:id="@+id/check_meditation"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:text="瞑想"
+            android:textSize="16sp" />
+
+        <RadioButton
+            android:id="@+id/check_seaion"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:text="季節の行事"
+            android:textSize="16sp" />
+
+        <RadioButton
+            android:id="@+id/check_daily_use"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:text="デイリーユース"
+            android:textSize="16sp" />
+
+        <RadioButton
+            android:id="@+id/check_adoration"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:text="礼拝・儀式"
+            android:textSize="16sp" />
+
+    </GridLayout>
+
+    <TextView
         android:id="@+id/question_1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:padding="16dp"
-        android:text="1. 材料を選択してください"
+        android:text="2. 材料を選択してください"
         android:textColor="@android:color/black"
         android:textSize="18sp" />
 
@@ -59,93 +145,6 @@
             android:textSize="16sp" />
 
     </RadioGroup>
-
-    <!-- 问题 2：兴趣爱好 -->
-    <TextView
-        android:id="@+id/question_2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:padding="16dp"
-        android:text="2. 欲しいの効果を選択してください"
-        android:textColor="@android:color/black"
-        android:textSize="18sp" />
-
-    <GridLayout
-        android:id="@+id/recommendation_grid"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:alignmentMode="alignMargins"
-        android:columnCount="3"
-        android:rowCount="3"
-        android:useDefaultMargins="true">
-
-        <CheckBox
-            android:id="@+id/check_relax"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:text="リラックス"
-            android:textSize="16sp" />
-
-        <CheckBox
-            android:id="@+id/check_clean"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:text="空間浄化"
-            android:textSize="16sp" />
-
-        <CheckBox
-            android:id="@+id/check_change"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
-            android:text="気分転換"
-            android:textSize="16sp" />
-
-        <CheckBox
-            android:id="@+id/check_bedroom"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
-            android:text="寝室用"
-            android:textSize="16sp" />
-
-        <CheckBox
-            android:id="@+id/check_meditation"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
-            android:text="瞑想"
-            android:textSize="16sp" />
-
-        <CheckBox
-            android:id="@+id/check_seaion"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
-            android:text="季節の行事"
-            android:textSize="16sp" />
-
-        <CheckBox
-            android:id="@+id/check_daily_use"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
-            android:text="デイリーユース"
-            android:textSize="16sp" />
-
-        <CheckBox
-            android:id="@+id/check_adoration"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
-            android:text="礼拝・儀式"
-            android:textSize="16sp" />
-
-    </GridLayout>
 
     <!-- 提交按钮 -->
     <Button
