--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -123,6 +123,15 @@
                 android:textSize="30sp" />
         </LinearLayout>
 
+
+        <Button
+            android:id="@+id/btn_logout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="ログアウト"
+            android:backgroundTint="@color/mtrl_btn_bg_color_selector_blue"
+            android:layout_gravity="center" />
+
     </LinearLayout>
 
     <!-- 固定在底部的导航布局 -->
