--- a/app/src/main/res/layout/activity_account.xml
+++ b/app/src/main/res/layout/activity_account.xml
@@ -22,20 +22,28 @@
         app:layout_constraintVertical_bias="0.3" />
 
     <Button
+        style="@style/Widget.Material3.Button.ElevatedButton.Icon"
         android:id="@+id/btnGoogleLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:drawablePadding="8dp"
+        app:icon="@drawable/ic_google_2"
+        android:gravity="center_vertical"
         android:text="Googleログイン"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        android:scaleType="fitCenter"
         app:layout_constraintVertical_bias="0.43" />
 
     <Button
+        style="@style/Widget.Material3.Button.ElevatedButton.Icon"
         android:id="@+id/btnEmailLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        app:icon="@drawable/email"
         android:text="メールログイン"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -45,6 +53,8 @@
         app:layout_constraintVertical_bias="0.518" />
 
     <Button
+        style="@style/Widget.Material3.Button.ElevatedButton.Icon"
+        app:icon="@drawable/account"
         android:id="@+id/btnNewAccount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -57,6 +67,9 @@
         app:layout_constraintVertical_bias="0.633" />
 
     <Button
+        style="@style/Widget.Material3.Button.ElevatedButton.Icon"
+        app:icon="@drawable/question"
+
         android:id="@+id/btnPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -69,7 +82,7 @@
         app:layout_constraintVertical_bias="0.633" />
 
     <Button
-        android:id="@+id/back"
+        android:id="@+id/btn_back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="戻る"
