--- a/app/src/main/res/layout/activity_email_login.xml
+++ b/app/src/main/res/layout/activity_email_login.xml
@@ -5,6 +5,8 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background_gradient"
+
     tools:context=".NewAccount">
 
 
@@ -21,15 +23,13 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
+        style="@style/Widget.Material3.Button.ElevatedButton.Icon"
+        app:icon="@drawable/logout"
         android:id="@+id/btnRegister"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
-        android:textColor="#FFFFFF"
-        android:radius="50dp"
-        android:color="#0000FF"
         android:text="登録"
-        android:backgroundTint="@color/mtrl_btn_bg_color_selector_blue"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
